[package]
name = "ipctl"
version = "0.1.0"
authors = ["Niumlaque <niumlaque@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.1", features = ["derive"] }

[profile.release]
strip = true
lto = true
