[package]
name = "ipctl"
version = "0.1.0"
authors = ["Niumlaque <niumlaque@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.20", features = ["derive"] }

[features]
default = []
tokio = []
